--- a/brunson-app/views/layout.pug
+++ b/brunson-app/views/layout.pug
@@ -29,13 +29,13 @@ html(lang="en")
         ul
           li
             a(href="https://www.instagram.com/jacobbrunsonburner/" target="_blank")
-              img(src="/img/ig.svg" class="social" width="32" height="32")
+              img(src="/img/ig.svg" class="social" width="32" height="32" aria-label="Instagram")
             a(href="https://github.com/jacobbrunson/personal-website" target="_blank")
-              img(src="/img/gh.svg" class="social" width="32" height="32")
+              img(src="/img/gh.svg" class="social" width="32" height="32" aria-label="GitHub")
             a(href="https://www.linkedin.com/in/jacob-brunson-42b61b142/" target="_blank")
-              img(src="/img/in.svg" class="social" width="32" height="32")
+              img(src="/img/in.svg" class="social" width="32" height="32" aria-label="LinkedIn")
             a(href="https://www.youtube.com/channel/UC0PM_FnwDoi9fLmsDaiI7Nw" target="_blank")
-              img(src="/img/yt.svg" class="social" width="32" height="32")
+              img(src="/img/yt.svg" class="social" width="32" height="32"  aria-label="YouTube")
     block content
     block scripts
     
